# jfqt

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: jft_process.cpp  jft_process.h  line_parser.cpp  line_parser.h  main.cpp  main_window.cpp  main_window.h
tests/: CMakeLists.txt  test_line_parser.cpp
